--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "history": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.22.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
